Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19620

MDS can't resume llog processing if a plain llog is found broken at start

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      if llog is truncated for a reason (power loss, corruption, etc), then MDS breaks llog record processing:

      [   45.564829] LustreError: 8282:0:(llog_osd.c:1243:llog_osd_next_block()) lustre-MDT0000-osd: invalid llog tail at log id [0x1:0x3:0x0] offset 8492 last_rec idx 65536 tail idx 5 lrt len 2 read_size 300
      [   45.565304] LustreError: 8282:0:(osp_sync.c:1406:osp_sync_thread()) lustre-OST0000-osc-MDT0000: llog process with osp_sync_process_queues failed: -22
      

      and corresponding osp thread exits:

      # ps ax|grep osp
         8283 ?        I      0:00 [osp-pre-0-0]
         8284 ?        I      0:00 [osp-syn-1-0]
         8285 ?        I      0:00 [osp-pre-1-0]
      

      this leads lost space on OST, missing credential updates.

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: